# NormalizInterface

./: .gitignore  .travis.yml  CHANGES  COPYING  LICENSE  Makefile.am  Makefile.gappkg  Makefile.in  PackageInfo.g  README  README.html  README.md  _config.yml  build-normaliz.sh  cone_property_install_script.sh  configure.ac  gen_cone_property_wrappers.sh  index.md  init.g  make_dist_for_normaliz.sh  makedoc.g  prerequisites.sh  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: NormalizInterface-bib.xml  chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chap2.html  chap2.txt  chap2_mj.html  chap3.html  chap3.txt  chap3_mj.html  chap4.html  chap4.txt  chap4_mj.html  chap5.html  chap5.txt  chap5_mj.html  chapBib.html  chapBib.txt  chapBib_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  intro.autodoc
etc/: download.sh  generate_cone_property_wrappers.g
examples/: 5x5.g  demo.g  docs.g  dual_mode.g  magic_square.g
lib/: cone_property_wrappers.gd  cone_property_wrappers.gi  normaliz.gd  normaliz.gi
src/: normaliz.c  normaliz.cc  normaliz.h
templates/: cone_property_function.gd.tpl  cone_property_function.gi.tpl
tst/: InhomIneq.tst  basic.tst  bugfix.tst  conversion.g  conversion.tst  cube-incidence.tst  descent.tst  dual.tst  fractions.tst  gorenstein.tst  lattice_ideal.tst  normalizinterface01.tst  normalizinterface02.tst  project.tst  rational.tst  rees.tst  rp2poly.tst  rproj2.tst  run-tap.test  template  testall.g  verticesfloat.tst
